// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FreeBar> renders 1`] = `
.c0 {
  position: relative;
}

.c1 {
  border: 1px solid white;
  background-image: url("test-file-stub");
}

.c2 {
  padding-top: 18px;
}

<div
  className="c0"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={Object {}}
>
  <Resizable
    className="c1"
    enable={
      Object {
        "right": true,
      }
    }
    grid={
      Array [
        1,
        1,
      ]
    }
    maxHeight={100}
    minHeight={100}
    minWidth={3}
    onResize={[Function]}
    onResizeStop={[Function]}
    size={
      Object {
        "height": 100,
        "width": 16.666666666666668,
      }
    }
  >
    <BarIcons
      className="c2"
      instructions={Array []}
    />
  </Resizable>
</div>
`;

exports[`<FreeBar> renders with tooltip when selected 1`] = `
.c0 {
  position: relative;
}

.c1 {
  border: 1px solid white;
  background-image: url("test-file-stub");
}

.c2 {
  padding-top: 18px;
}

<div
  className="c0"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "zIndex": 1,
    }
  }
>
  <Tooltip
    interval={
      Object {
        "cadence": undefined,
        "id": "mock-id",
        "instructions": Array [],
        "length": Object {
          "seconds": 50,
        },
        "type": "free",
      }
    }
    mode={
      BikeMode {
        "ftp": 200,
        "lengthType": "time",
        "sportType": "bike",
        "weight": 75,
      }
    }
    onCadenceChange={[Function]}
  />
  <Resizable
    className="c1"
    enable={
      Object {
        "right": true,
      }
    }
    grid={
      Array [
        1,
        1,
      ]
    }
    maxHeight={100}
    minHeight={100}
    minWidth={3}
    onResize={[Function]}
    onResizeStop={[Function]}
    size={
      Object {
        "height": 100,
        "width": 16.666666666666668,
      }
    }
  >
    <BarIcons
      className="c2"
      instructions={Array []}
    />
  </Resizable>
</div>
`;
